[package]
name = "dinozaur-google-oled"
version = "0.1.0"
authors = ["mmajews2"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "dinozaur-google-oled"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.2.0"
nb = "0.1.2"
embedded-hal = "0.2.3"
ssd1306 = "0.8.4"
display-interface = "=0.4.1"
display-interface-i2c = "=0.4.0"
display-interface-spi = "=0.4.1"
embedded-graphics-core = "=0.4.0"
embedded-graphics = "=0.8.1"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "190f2c3cb8d29e10f71119352b912369dc5a1fb7"
features = ["arduino-uno"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"

[dependencies.avr-device]
version = "0.5.4"

